--- a/app/views/spree/shared/_brazilian_user_form.html.erb
+++ b/app/views/spree/shared/_brazilian_user_form.html.erb
@@ -1,6 +1,6 @@
 <p id="user_account_type_box">
-  <%= radio_button "user", "account_type", "personal", {:checked => true } %> Pessoa física 
-  <%= radio_button "user", "account_type", "business" %> Pessoa Jurídica
+  <%= radio_button "user", "account_type", "personal", {:checked => true } %> <%= t(:personal_account) %>
+  <%= radio_button "user", "account_type", "business" %> <%= t(:business_account) %>
 </p>
 
 <p>
