corrected type of cpf field

--- a/app/views/spree/shared/_brazilian_user_form.html.erb
+++ b/app/views/spree/shared/_brazilian_user_form.html.erb
@@ -11,7 +11,7 @@
 <div id="personal_box">
   <p>
     <%= f.label :cpf, t(:cpf) %><br />
-    <%= f.email_field :cpf, :class => 'title' %>
+    <%= f.text_field :cpf, :class => 'title' %>
   </p>
 </div>
 
