corrected input types in forms

--- a/app/views/spree/shared/_brazilian_user_form.html.erb
+++ b/app/views/spree/shared/_brazilian_user_form.html.erb
@@ -18,17 +18,17 @@
 <div id="business_box">
   <p>
     <%= f.label :cnpj, t(:cnpj) %><br />
-    <%= f.email_field :cnpj, :class => 'title' %>
+    <%= f.text_field :cnpj, :class => 'title' %>
   </p>
-  
+
   <p>
     <%= f.label :state_registry, t(:state_registry) %><br />
-    <%= f.email_field :state_registry, :class => 'title' %>
+    <%= f.text_field :state_registry, :class => 'title' %>
   </p>
-  
+
   <p>
     <%= f.label :company_name, t(:company_name) %><br />
-    <%= f.email_field :company_name, :class => 'title' %>
+    <%= f.text_field :company_name, :class => 'title' %>
   </p>
 </div>
 
